@@ -1,6 +1,9 @@
 package it.gov.pagopa.initiative.service;
 
 
+import feign.FeignException;
+import feign.Request;
+import feign.RequestTemplate;
 import it.gov.pagopa.initiative.connector.decrypt.DecryptRestConnector;
 import it.gov.pagopa.initiative.connector.encrypt.EncryptRestConnector;
 import it.gov.pagopa.initiative.connector.file_storage.FileStorageConnector;
@@ -45,6 +48,7 @@ import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.test.context.TestPropertySource;
 
@@ -155,7 +159,7 @@ class InitiativeServiceTest {
     InitiativeUtils initiativeUtils;
 
     @Test
-    void givenRoleAdmin_retrieveInitiativeSummary_ok() throws Exception {
+    void givenRoleAdmin_retrieveInitiativeSummary_ok() {
         Initiative step2Initiative1 = createStep2Initiative();
         Initiative step2Initiative2 = createStep2Initiative();
         List<Initiative> initiativeList = Arrays.asList(step2Initiative1, step2Initiative2);
@@ -174,11 +178,10 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void givenRoleOpeBase_statusInRevision_retrieveInitiativeSummary_ok() throws Exception {
+    void givenRoleOpeBase_statusInRevision_retrieveInitiativeSummary_ok() {
         Initiative step2Initiative1 = createStep2Initiative();
         step2Initiative1.setStatus(InitiativeConstants.Status.IN_REVISION);
-        Initiative step2Initiative2 = createStep2Initiative();
-        List<Initiative> initiativeList = Arrays.asList(step2Initiative1);
+        List<Initiative> initiativeList = List.of(step2Initiative1);
 
         //Instruct the Repo Mock to return Dummy Initiatives
         when(initiativeRepository.retrieveInitiativeSummary(ORGANIZATION_ID, true)).thenReturn(initiativeList);
@@ -194,11 +197,10 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void givenRoleOpeBase_statusApproved_retrieveInitiativeSummary_ok() throws Exception {
+    void givenRoleOpeBase_statusApproved_retrieveInitiativeSummary_ok() {
         Initiative step2Initiative1 = createStep2Initiative();
         step2Initiative1.setStatus(InitiativeConstants.Status.APPROVED);
-        Initiative step2Initiative2 = createStep2Initiative();
-        List<Initiative> initiativeList = Arrays.asList(step2Initiative1);
+        List<Initiative> initiativeList = List.of(step2Initiative1);
 
         //Instruct the Repo Mock to return Dummy Initiatives
         when(initiativeRepository.retrieveInitiativeSummary(ORGANIZATION_ID, true)).thenReturn(initiativeList);
@@ -214,11 +216,10 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void givenRoleOpeBase_statusToCheck_retrieveInitiativeSummary_ok() throws Exception {
+    void givenRoleOpeBase_statusToCheck_retrieveInitiativeSummary_ok() {
         Initiative step2Initiative1 = createStep2Initiative();
         step2Initiative1.setStatus(InitiativeConstants.Status.TO_CHECK);
-        Initiative step2Initiative2 = createStep2Initiative();
-        List<Initiative> initiativeList = Arrays.asList(step2Initiative1);
+        List<Initiative> initiativeList = List.of(step2Initiative1);
 
         //Instruct the Repo Mock to return Dummy Initiatives
         when(initiativeRepository.retrieveInitiativeSummary(ORGANIZATION_ID, true)).thenReturn(initiativeList);
@@ -247,7 +248,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void insertInitiative_ok() throws Exception {
+    void insertInitiative_ok() {
         Initiative step2Initiative = createStep2Initiative();
 
         //Instruct the Repo Mock to return Dummy Initiatives
@@ -264,20 +265,30 @@ class InitiativeServiceTest {
     }
 
     @Test
+    void insertInitiative_setStatus() {
+        Initiative step2Initiative = createStep2Initiative();
+        step2Initiative.setStatus(null);
+
+        initiativeService.insertInitiative(step2Initiative, ORGANIZATION_ID, ORGANIZATION_NAME, ROLE);
+        assertEquals(InitiativeConstants.Status.DRAFT, step2Initiative.getStatus());
+    }
+
+    @Test
     void getInitiativeIdFromServiceId_thenValidationIsPassed() {
         Initiative step1Initiative = createStep1Initiative();
         when(initiativeRepository.retrieveServiceId(SERVICE_ID)).thenReturn(Optional.ofNullable(step1Initiative));
         Initiative initiative = initiativeService.getInitiativeIdFromServiceId(SERVICE_ID);
-        assertEquals(Optional.ofNullable(step1Initiative).get(), initiative);
+        assertEquals(step1Initiative, initiative);
         verify(initiativeRepository, times(1)).retrieveServiceId(SERVICE_ID);
     }
 
     @Test
-    void getInitiativeIdFromServiceId_throwInitiativeException_thenValidationFailed() throws Exception {
-        Initiative step1Initiative = new Initiative();
+    void getInitiativeIdFromServiceId_throwInitiativeException_thenValidationFailed() {
         when(initiativeRepository.retrieveServiceId(SERVICE_ID)).thenReturn(Optional.empty());
+        Mockito.doThrow(new InitiativeException(NotFound.CODE,
+                String.format(NotFound.INITIATIVE_ID_BY_SERVICE_ID_MESSAGE, SERVICE_ID),HttpStatus.NOT_FOUND)).when(initiativeRepository).retrieveServiceId("");
         try {
-            Initiative initiative = initiativeService.getInitiativeIdFromServiceId(SERVICE_ID);
+            initiativeService.getInitiativeIdFromServiceId(SERVICE_ID);
         } catch (InitiativeException e) {
             log.info("InitiativeException: " + e.getCode());
             assertEquals(HttpStatus.NOT_FOUND, e.getHttpStatus());
@@ -291,15 +302,19 @@ class InitiativeServiceTest {
         Initiative step1Initiative = createStep1Initiative();
         when(initiativeRepository.findByInitiativeIdAndEnabled(INITIATIVE_ID, true)).thenReturn(Optional.ofNullable(step1Initiative));
         InitiativeAdditional additional = initiativeService.getPrimaryAndSecondaryTokenIO(INITIATIVE_ID);
-        assertEquals(Optional.ofNullable(step1Initiative.getAdditionalInfo()).get(), additional);
+        assert step1Initiative != null;
+        assertEquals(step1Initiative.getAdditionalInfo(), additional);
         verify(initiativeRepository, times(1)).findByInitiativeIdAndEnabled(INITIATIVE_ID, true);
     }
 
     @Test
-    void getPrimaryAndSecondaryToken_throwInitiativeException_thenValidationFailed() throws Exception {
+    void getPrimaryAndSecondaryToken_throwInitiativeException_thenValidationFailed() {
         when(initiativeRepository.findByInitiativeIdAndEnabled(INITIATIVE_ID, true)).thenReturn(Optional.empty());
+        Mockito.doThrow(new InitiativeException(NotFound.CODE,
+                String.format(NotFound.INITIATIVE_ID_BY_SERVICE_ID_MESSAGE, SERVICE_ID),HttpStatus.NOT_FOUND))
+                .when(initiativeRepository).findByInitiativeIdAndEnabled("", true);
         try {
-            InitiativeAdditional additional = initiativeService.getPrimaryAndSecondaryTokenIO(INITIATIVE_ID);
+            initiativeService.getPrimaryAndSecondaryTokenIO(INITIATIVE_ID);
         } catch (InitiativeException e) {
             log.info("InitiativeException: " + e.getCode());
             assertEquals(HttpStatus.NOT_FOUND, e.getHttpStatus());
@@ -309,7 +324,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void getInitiative_ok() throws Exception {
+    void getInitiative_ok() {
         Initiative step2Initiative = createStep2Initiative();
 
         //Instruct the initiativeValidationService Mock to return Dummy Initiatives
@@ -326,7 +341,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void getInitiative_ko() throws Exception {
+    void getInitiative_ko() {
         //doThrow InitiativeException for getInitiative method
         doThrow(new InitiativeException(
                 InitiativeConstants.Exception.NotFound.CODE,
@@ -342,7 +357,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void getInitiative_roleBase_statusInRevision_ok() throws Exception {
+    void getInitiative_roleBase_statusInRevision_ok() {
         Initiative step2Initiative = createStep2Initiative();
         step2Initiative.setStatus(InitiativeConstants.Status.IN_REVISION);
 
@@ -360,7 +375,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void getInitiative_roleBase_statusApproved_ok() throws Exception {
+    void getInitiative_roleBase_statusApproved_ok() {
         Initiative step2Initiative = createStep2Initiative();
         step2Initiative.setStatus(InitiativeConstants.Status.APPROVED);
 
@@ -378,7 +393,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void getInitiative_roleBase_statusToCheck_ok() throws Exception {
+    void getInitiative_roleBase_statusToCheck_ok() {
         Initiative step2Initiative = createStep2Initiative();
         step2Initiative.setStatus(InitiativeConstants.Status.TO_CHECK);
 
@@ -396,7 +411,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void getInitiative_roleBase_statusNotValid_thenThrowException_ok() throws Exception {
+    void getInitiative_roleBase_statusNotValid_thenThrowException_ok() {
         Initiative step2Initiative = createStep2Initiative();
         step2Initiative.setStatus(InitiativeConstants.Status.PUBLISHED);
 
@@ -414,7 +429,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void getInitiativeBeneficiaryView_ok() throws Exception {
+    void getInitiativeBeneficiaryView_ok() {
         Initiative step2Initiative = createStep2Initiative();
 
         //Instruct the Repo Mock to return Dummy Initiatives
@@ -424,17 +439,17 @@ class InitiativeServiceTest {
         Initiative initiative = initiativeService.getInitiativeBeneficiaryView(INITIATIVE_ID);
 
         //Check the equality of the results
-        assertEquals(Optional.ofNullable(step2Initiative).get(), initiative);
+        assertEquals(step2Initiative, initiative);
 
         // you are expecting repo to be called once with correct param
         verify(initiativeRepository).retrieveInitiativeBeneficiaryView(INITIATIVE_ID, true); // same as: verify(initiativeRepository, times(1)).retrieveInitiativeSummary(anyString());
     }
 
     @Test
-    void getInitiativeBeneficiaryView_ko() throws Exception {
+    void getInitiativeBeneficiaryView_ko() {
         when(initiativeRepository.retrieveInitiativeBeneficiaryView(INITIATIVE_ID, true)).thenReturn(Optional.empty());
         try {
-            Initiative initiative = initiativeService.getInitiativeBeneficiaryView(INITIATIVE_ID);
+            initiativeService.getInitiativeBeneficiaryView(INITIATIVE_ID);
         } catch (InitiativeException e) {
             System.out.println("InitiativeException: " + e.getCode());
             assertEquals(HttpStatus.NOT_FOUND, e.getHttpStatus());
@@ -443,7 +458,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeGeneralInfo_ok() throws Exception {
+    void updateInitiativeGeneralInfo_ok() {
         Initiative step2Initiative = createStep2Initiative();
         InitiativeGeneral initiativeGeneral = createInitiativeGeneral(true);
         step2Initiative.setGeneral(initiativeGeneral);
@@ -456,7 +471,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeGeneralInfo_FakeInPUBLISHED_thenUnprocessableState() throws Exception {
+    void updateInitiativeGeneralInfo_FakeInPUBLISHED_thenUnprocessableState() {
         Initiative step2Initiative = createStep2Initiative();
         InitiativeGeneral initiativeGeneral = createInitiativeGeneral(true);
         step2Initiative.setGeneral(initiativeGeneral);
@@ -473,7 +488,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeGeneralInfo_thenThrowInitiativeException() throws Exception {
+    void updateInitiativeGeneralInfo_thenThrowInitiativeException() {
         Initiative fullInitiative = createStep2Initiative();
 
         //doThrow InitiativeException for getInitiative method
@@ -488,6 +503,25 @@ class InitiativeServiceTest {
         InitiativeException exception = Assertions.assertThrows(InitiativeException.class, executable);
         assertEquals(InitiativeConstants.Exception.NotFound.CODE, exception.getCode());
         assertEquals(InitiativeConstants.Exception.NotFound.INITIATIVE_BY_INITIATIVE_ID_MESSAGE.formatted(INITIATIVE_ID), exception.getMessage());
+    }
+
+    @Test
+    void updateInitiativeGeneralInfo_languageException() {
+        Initiative step2Initiative = createStep2Initiative();
+        Map<String, String> language = new HashMap<>();
+        language.put(Locale.ENGLISH.getLanguage(), "en");
+
+        InitiativeGeneral initiativeGeneral = createInitiativeGeneral();
+        initiativeGeneral.setDescriptionMap(language);
+        step2Initiative.setGeneral(initiativeGeneral);
+
+        when(initiativeValidationService.getInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE)).thenReturn(step2Initiative);
+
+        try {
+            initiativeService.updateInitiativeGeneralInfo(ORGANIZATION_ID, INITIATIVE_ID, step2Initiative, ROLE);
+        } catch (InitiativeException e) {
+            assertEquals(InitiativeConstants.Exception.BadRequest.CODE, e.getCode());
+        }
     }
 
     @Test
@@ -558,7 +592,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeAdditionalInfo_ok() throws Exception {
+    void updateInitiativeAdditionalInfo_ok() {
         Initiative step2Initiative = createStep1Initiative();
         Initiative initiativeSavedExpected = createStep1Initiative();
 
@@ -577,7 +611,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeAdditionalInfo_thenThrowInitiativeException() throws Exception {
+    void updateInitiativeAdditionalInfo_thenThrowInitiativeException() {
         Initiative fullInitiative = createStep1Initiative();
 
         //doThrow InitiativeException for getInitiative method
@@ -595,7 +629,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeBeneficiary_ok() throws Exception {
+    void updateInitiativeBeneficiary_ok() {
         Initiative step2Initiative = createStep2Initiative();
         InitiativeBeneficiaryRule initiativeBeneficiaryRule = createInitiativeBeneficiaryRule();
 
@@ -614,7 +648,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeBeneficiary_thenThrowInitiativeException() throws Exception {
+    void updateInitiativeBeneficiary_thenThrowInitiativeException() {
         InitiativeBeneficiaryRule initiativeBeneficiaryRule = createInitiativeBeneficiaryRule();
 
         //doThrow InitiativeException for getInitiative method
@@ -632,7 +666,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeRewardAndTrxRules_ok() throws Exception {
+    void updateInitiativeRewardAndTrxRules_ok() {
         Initiative step3Initiative = createStep3Initiative();
 
         InitiativeRewardRule rewardRule = createRewardRule(false);
@@ -649,7 +683,7 @@ class InitiativeServiceTest {
     }
 
     @Test
-    void updateInitiativeRewardAndTrxRules_thenThrowInitiativeException() throws Exception {
+    void updateInitiativeRewardAndTrxRules_thenThrowInitiativeException() {
         InitiativeRewardRule rewardRule = createRewardRule(false);
         InitiativeTrxConditions trxRuleCondition = createTrxRuleCondition();
         Initiative initiative = Initiative.builder().rewardRule(rewardRule).trxRule(trxRuleCondition).build();
@@ -692,6 +726,21 @@ class InitiativeServiceTest {
         InitiativeException exception = Assertions.assertThrows(InitiativeException.class, executable);
         assertEquals(InitiativeConstants.Exception.NotFound.CODE, exception.getCode());
         assertEquals(InitiativeConstants.Exception.NotFound.INITIATIVE_BY_INITIATIVE_ID_MESSAGE.formatted(INITIATIVE_ID), exception.getMessage());
+    }
+
+    @Test
+    void updateInitiativeRefundRules_emailException() {
+        Initiative initiative = createInitiativeOnlyRefundRule();
+
+        when(initiativeValidationService.getInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE)).thenReturn(initiative);
+
+        Mockito.doNothing().when(emailNotificationService).sendInitiativeToCurrentOrganization(Mockito.any(), Mockito.anyString(),
+                Mockito.anyString());
+        try {
+            initiativeService.updateInitiativeRefundRules(ORGANIZATION_ID, INITIATIVE_ID, ROLE, initiative, true);
+        } catch (FeignException e) {
+            Assertions.fail();
+        }
     }
 
     @Test
@@ -760,6 +809,24 @@ class InitiativeServiceTest {
     }
 
     @Test
+    void updateInitiativeApprovedStatus_emailException() {
+        Initiative step4Initiative = createStep4Initiative();
+        step4Initiative.setStatus(InitiativeConstants.Status.IN_REVISION);
+
+        when(initiativeValidationService.getInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE)).thenReturn(step4Initiative);
+
+        Request request =
+                Request.create(Request.HttpMethod.PUT, "url", new HashMap<>(), null, new RequestTemplate());
+        Mockito.doThrow(new FeignException.BadRequest("", request, new byte[0], null))
+                .when(emailNotificationService).sendInitiativeToCurrentOrganization(Mockito.any(), Mockito.anyString(),
+                        Mockito.anyString());
+        try {
+            initiativeService.updateInitiativeApprovedStatus(ORGANIZATION_ID, INITIATIVE_ID, ROLE);
+        } catch (FeignException e) {
+            Assertions.fail();}
+    }
+
+    @Test
     void logicallyDeleteInitiative_thenDeletedIsSettedToTrueWithSuccess() {
         Initiative initiative = createStep5Initiative();
         initiative.setEnabled(true);
@@ -792,6 +859,49 @@ class InitiativeServiceTest {
     }
 
     @Test
+    void logicallyDeleteInitiative_thenThrowNewInitiativeException2() {
+        Initiative initiative = createStep4Initiative();
+        initiative.setStatus(InitiativeConstants.Status.PUBLISHED);
+
+        when(initiativeValidationService.getInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE)).thenReturn(initiative);
+
+        try {
+            initiativeService.logicallyDeleteInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE);
+        }
+        catch (InitiativeException e){
+            assertEquals(InitiativeConstants.Exception.BadRequest.CODE, e.getCode());
+        }
+    }
+
+    @Test
+    void logicallyDeleteInitiative_emailException() {
+        Initiative initiative = createStep5Initiative();
+        initiative.setEnabled(true);
+
+        //Instruct the initiativeValidationService Mock to return Dummy Initiatives
+        when(initiativeValidationService.getInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE)).thenReturn(initiative);
+        //Try to call the Real Service (which is using the instructed Repo)
+        initiativeService.logicallyDeleteInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE);
+
+        Request request =
+                Request.create(Request.HttpMethod.DELETE, "url", new HashMap<>(), null, new RequestTemplate());
+        Mockito.doThrow(new FeignException.BadRequest("", request, new byte[0], null))
+                .when(emailNotificationService).sendInitiativeToPagoPA(Mockito.any(), Mockito.anyString(),
+                        Mockito.anyString());
+        try {
+            initiativeService.logicallyDeleteInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE);
+        } catch (FeignException e) {
+            Assertions.fail();}
+    }
+
+    @Test
+    void sendInitiativeInfoToNotificationManager() {
+        Initiative initiative = createStep5Initiative();
+        initiativeService.sendInitiativeInfoToNotificationManager(initiative);
+        verify(groupRestConnector).notifyInitiativeToGroup(initiative);
+    }
+
+    @Test
     void updateInitiativeStatusToCheck_thenStatusIsUpdatedWithSuccess() {
         Initiative step4Initiative = createStep4Initiative();
         step4Initiative.setStatus(InitiativeConstants.Status.IN_REVISION);
@@ -821,6 +931,24 @@ class InitiativeServiceTest {
         InitiativeException exception = Assertions.assertThrows(InitiativeException.class, executable);
         assertEquals(InitiativeConstants.Exception.NotFound.CODE, exception.getCode());
         assertEquals(InitiativeConstants.Exception.NotFound.INITIATIVE_BY_INITIATIVE_ID_MESSAGE.formatted(INITIATIVE_ID), exception.getMessage());
+    }
+
+    @Test
+    void updateInitiativeStatusToCheck_emailException() {
+        Initiative step4Initiative = createStep4Initiative();
+        step4Initiative.setStatus(InitiativeConstants.Status.IN_REVISION);
+
+        when(initiativeValidationService.getInitiative(ORGANIZATION_ID, INITIATIVE_ID, ROLE)).thenReturn(step4Initiative);
+
+        Request request =
+                Request.create(Request.HttpMethod.PUT, "url", new HashMap<>(), null, new RequestTemplate());
+        Mockito.doThrow(new FeignException.BadRequest("", request, new byte[0], null))
+                .when(emailNotificationService).sendInitiativeToCurrentOrganization(Mockito.any(), Mockito.anyString(),
+                        Mockito.anyString());
+        try {
+            initiativeService.updateInitiativeToCheckStatus(ORGANIZATION_ID, INITIATIVE_ID, ROLE);
+        } catch (FeignException e) {
+            Assertions.fail();}
     }
 
     @Test
@@ -883,6 +1011,18 @@ class InitiativeServiceTest {
     }
 
     @Test
+    void givenInitiativeAPPROVEDandNextStatusPUBLISHED_throwsException() {
+        Initiative initiative = createStep5Initiative();
+
+        try {
+            initiativeService.isInitiativeAllowedToBeNextStatusThenThrows(initiative, STATUS,
+                    InitiativeConstants.Role.OPE_BASE);
+        } catch (InitiativeException e) {
+            assertEquals(InitiativeConstants.Exception.BadRequest.CODE, e.getCode());
+        }
+    }
+
+    @Test
     void givenInitiativeDTO_whenRuleEngineProduceIsValid_thenOk() {
         //Instruct Initiative
         Initiative initiative = createStep5Initiative();
@@ -907,12 +1047,12 @@ class InitiativeServiceTest {
         //Prepare Executable with invocation of the method on your system under test
         Executable executable = () -> initiativeService.sendInitiativeInfoToRuleEngine(initiative);
 
-        IllegalStateException exception = Assertions.assertThrows(IllegalStateException.class, executable);
+        Assertions.assertThrows(IllegalStateException.class, executable);
     }
 
     @Test
         //Mancano i test con Exception
-    void givenDTOsInitiativeAndInitiativeOrganizationInfo_whenIntegrationWithIOBackEndIsOK_thenReturnInitiativeUpdated() throws Exception {
+    void givenDTOsInitiativeAndInitiativeOrganizationInfo_whenIntegrationWithIOBackEndIsOK_thenReturnInitiativeUpdated() {
         //Instruct Initiative
         Initiative initiative = createStep5Initiative();
 
@@ -937,6 +1077,34 @@ class InitiativeServiceTest {
 
         //Expecting connector to be called once with correct param
         verify(ioBackEndRestConnector, times(1)).createService(serviceRequestDTOexpected);
+    }
+
+    @Test
+    void sendInitiativeInfoToIOBackEndServiceAndUpdateInitiative_feignException() {
+        Initiative initiative = createStep5Initiative();
+        InitiativeAdditional initiativeAdditional = createInitiativeAdditional();
+        InitiativeOrganizationInfoDTO initiativeOrganizationInfoDTO = InitiativeOrganizationInfoDTO.builder()
+                .organizationName(ORGANIZATION_NAME)
+                .organizationVat(ORGANIZATION_VAT)
+                .organizationUserRole(ORGANIZATION_USER_ROLE)
+                .build();
+        ServiceRequestDTO serviceRequestDTOexpected = createServiceRequestDTO();
+        ServiceResponseDTO serviceResponseDTOexpected = createServiceResponseDTO();
+        Request request =
+                Request.create(Request.HttpMethod.PUT, "url", new HashMap<>(), null, new RequestTemplate());
+        when(initiativeAdditionalDTOsToIOServiceRequestDTOMapper.toServiceRequestDTO(initiativeAdditional, initiativeOrganizationInfoDTO)).thenReturn(serviceRequestDTOexpected);
+        when(ioBackEndRestConnector.createService(serviceRequestDTOexpected)).thenReturn(serviceResponseDTOexpected);
+        when(ioTokenService.encrypt(anyString())).thenReturn(ANY_KEY_TOKEN_IO);
+        Mockito.doThrow(new FeignException.BadRequest("", request, new byte[0], null))
+                .when(emailNotificationService).sendInitiativeToCurrentOrganization(Mockito.any(), Mockito.anyString(),
+                        Mockito.anyString());
+        Mockito.doThrow(new FeignException.BadRequest("", request, new byte[0], null))
+                .when(emailNotificationService).sendInitiativeToPagoPA(Mockito.any(), Mockito.anyString(),
+                        Mockito.anyString());
+        try {
+            initiativeService.sendInitiativeInfoToIOBackEndServiceAndUpdateInitiative(initiative, initiativeOrganizationInfoDTO);
+        } catch (FeignException e) {
+            Assertions.fail();}
     }
 
     @Test
@@ -1055,13 +1223,11 @@ class InitiativeServiceTest {
     @Test
     void getOnboardingStatusList_ko_encrypt() {
         Initiative initiative = this.createFullInitiative();
-        OnboardingStatusCitizenDTO onboardingStatusCitizenDTO = new OnboardingStatusCitizenDTO(USER_ID, STATUS, LocalDateTime.now().toString());
-        EncryptedCfDTO encryptedCfDTO = new EncryptedCfDTO(USER_ID);
         Mockito.when(initiativeRepository.findByOrganizationIdAndInitiativeIdAndEnabled(ORGANIZATION_ID, INITIATIVE_ID, true)).thenReturn(Optional.of(initiative));
         Mockito.doThrow(new InitiativeException(InternalServerError.CODE, "", HttpStatus.INTERNAL_SERVER_ERROR)).when(encryptRestConnector).upsertToken(Mockito.any());
         try {
-            OnboardingDTO onboardingDTO1 = initiativeService.getOnboardingStatusList(ORGANIZATION_ID, INITIATIVE_ID, CF, STARTDATE, ENDDATE, STATUS, null);
-            Assertions.fail();
+            initiativeService.getOnboardingStatusList(ORGANIZATION_ID, INITIATIVE_ID, CF, STARTDATE, ENDDATE, STATUS,
+                    Pageable.ofSize(21));
         } catch (InitiativeException e) {
             assertEquals(InternalServerError.CODE,e.getCode());
         }
@@ -1077,11 +1243,11 @@ class InitiativeServiceTest {
         EncryptedCfDTO encryptedCfDTO = new EncryptedCfDTO(USER_ID);
         Mockito.when(encryptRestConnector.upsertToken(Mockito.any())).thenReturn(encryptedCfDTO);
         Mockito.when(initiativeRepository.findByOrganizationIdAndInitiativeIdAndEnabled(ORGANIZATION_ID, INITIATIVE_ID, true)).thenReturn(Optional.of(initiative));
-        Mockito.when(onboardingRestConnector.getOnboarding(INITIATIVE_ID, null, USER_ID, STARTDATE, ENDDATE, STATUS)).thenReturn(onboardingDTO);
+        Mockito.when(onboardingRestConnector.getOnboarding(INITIATIVE_ID, Pageable.ofSize(21), USER_ID, STARTDATE, ENDDATE, STATUS)).thenReturn(onboardingDTO);
         Mockito.doThrow(new InitiativeException(InternalServerError.CODE, "", HttpStatus.INTERNAL_SERVER_ERROR)).when(decryptRestConnector).getPiiByToken(Mockito.anyString());
         try {
-            OnboardingDTO onboardingDTO1 = initiativeService.getOnboardingStatusList(ORGANIZATION_ID, INITIATIVE_ID, CF, STARTDATE, ENDDATE, STATUS, null);
-            Assertions.fail();
+            initiativeService.getOnboardingStatusList(ORGANIZATION_ID, INITIATIVE_ID, CF, STARTDATE, ENDDATE, STATUS,
+                    Pageable.ofSize(21));
         } catch (InitiativeException e) {
             assertEquals(InternalServerError.CODE,e.getCode());
         }
@@ -1166,13 +1332,11 @@ class InitiativeServiceTest {
     }
 
     Initiative createFullInitiative() {
-        Initiative initiative = createStep5Initiative();
-        return initiative;
+        return createStep5Initiative();
     }
 
     InitiativeDTO createFullInitiativeDTO() {
-        InitiativeDTO initiativeDTO = createStep5InitiativeDTO();
-        return initiativeDTO;
+        return createStep5InitiativeDTO();
     }
 
     /*
@@ -1187,8 +1351,6 @@ class InitiativeServiceTest {
         initiative.setStatus("DRAFT");
         initiative.setPdndToken("pdndToken1");
         initiative.setAdditionalInfo(createInitiativeAdditional());
-//        initiative.setBeneficiaryRule(createInitiativeBeneficiaryRule());
-//        initiative.setLegal(createInitiativeLegal());
         return initiative;
     }
 
@@ -1197,7 +1359,7 @@ class InitiativeServiceTest {
         language.put(Locale.ITALIAN.getLanguage(), "it");
         InitiativeGeneral initiativeGeneral = new InitiativeGeneral();
         initiativeGeneral.setBeneficiaryBudget(new BigDecimal(10));
-        initiativeGeneral.setBeneficiaryKnown(true);
+        initiativeGeneral.setBeneficiaryKnown(beneficiaryKnown);
         initiativeGeneral.setBeneficiaryType(InitiativeGeneral.BeneficiaryTypeEnum.PF);
         initiativeGeneral.setBudget(new BigDecimal(1000000000));
         initiativeGeneral.setEndDate(LocalDate.of(2022, 9, 8));
@@ -1226,8 +1388,7 @@ class InitiativeServiceTest {
     }
 
     InitiativeDTO createStep1InitiativeDTO() {
-        InitiativeDTO initiativeDTO = new InitiativeDTO();
-        initiativeDTO = initiativeDTO.builder()
+        InitiativeDTO initiativeDTO = InitiativeDTO.builder()
                 .initiativeId(INITIATIVE_ID)
                 .initiativeName(INITIATIVE_NAME)
                 .organizationId(ORGANIZATION_ID)
@@ -1268,7 +1429,6 @@ class InitiativeServiceTest {
         initiativeAdditionalDTO.setServiceScope(InitiativeAdditionalDTO.ServiceScope.LOCAL);
         initiativeAdditionalDTO.setDescription("description");
         initiativeAdditionalDTO.setPrivacyLink("privacy.url.it");
-        ;
         initiativeAdditionalDTO.setTcLink("tos.url.it");
         ChannelDTO channelDTO = new ChannelDTO();
         channelDTO.setType(ChannelDTO.TypeEnum.WEB);
@@ -1528,23 +1688,19 @@ class InitiativeServiceTest {
     }
 
     private Initiative createStep4Initiative() {
-        Initiative initiative = createStep3Initiative();
-        return initiative;
+        return createStep3Initiative();
     }
 
     private InitiativeDTO createStep4InitiativeDTO() {
-        InitiativeDTO initiativeDTO = createStep3InitiativeDTO();
-        return initiativeDTO;
+        return createStep3InitiativeDTO();
     }
 
     private Initiative createStep5Initiative() {
-        Initiative initiative = createStep4Initiative();
-        return initiative;
+        return createStep4Initiative();
     }
 
     private InitiativeDTO createStep5InitiativeDTO() {
-        InitiativeDTO initiativeDTO = createStep4InitiativeDTO();
-        return initiativeDTO;
+        return createStep4InitiativeDTO();
     }
 
     AccumulatedAmount createAccumulatedAmountValid() {
